--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,8 @@
 ## Basic Configuration
 
-baseurl = "https://svenmilewski.github.io/"
+baseurl = "https://svenmilewski.github.io/svenmilewski.de"
 builddrafts = false
-canonifyurls = false
+canonifyurls = true
 languageCode = "en-US"
 
 contentdir = "content"
